<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_proceed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#607D8B"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.hp.bunkpoll.Proceed">


        <TextView
            android:id="@+id/regis_view_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:text="@string/proceed_college"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/regis_text_college"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/proceed_college_text"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/regis_view_branch"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:text="@string/proceed_branch"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/regis_text_branch"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/proceed_branch_text"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/regis_view_sem"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:text="@string/proceed_sem"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/regis_text_sem"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/proceed_sem_text"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />


        <TextView
            android:id="@+id/regis_view_section"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:text="@string/proceed_section"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/regis_text_section"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/proceed_section_text"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <TextView
            android:id="@+id/regis_view_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:paddingLeft="15dp"
            android:text="@string/proceed_phone"
            android:textColor="#FFFFFF"
            android:textSize="22sp" />


        <EditText
            android:id="@+id/regis_text_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:backgroundTint="#FFFFFF"
            android:ems="10"
            android:hint="@string/proceed_phone_text"
            android:inputType="phone"
            android:paddingLeft="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#263238"
            android:onClick="saveInfo"
            android:paddingBottom="7dp"
            android:text="@string/proceed_btn_register"
            android:textColor="#FFFFFF" />


    </LinearLayout>
</ScrollView>